--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,9 +2,9 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Run Home Assistant on port 8123",
+            "label": "create-config-dir",
             "type": "shell",
-            "command": "scripts/develop",
+            "command": "scripts/config",
             "problemMatcher": []
         }
     ]
