--- a/custom_components/livisi/manifest.json
+++ b/custom_components/livisi/manifest.json
@@ -10,8 +10,7 @@
   "issue_tracker": "https://github.com/planbnet/livisi_unofficial/issues",
   "requirements": [
     "aiohttp",
-    "pydantic",
-    "websockets"
+    "pydantic"
   ],
-  "version": "0.0.1"
+  "version": "1.3.0"
 }
