--- a/custom_components/livisi/manifest.json
+++ b/custom_components/livisi/manifest.json
@@ -10,7 +10,7 @@
   "issue_tracker": "https://github.com/planbnet/livisi_unofficial/issues",
   "requirements": [
     "aiohttp",
-    "pydantic"
+    "websockets"
   ],
-  "version": "1.3.0"
+  "version": "1.6.0"
 }
