Implement auto/manual suppoert for thermostats (climate entities)
The messaging system had to be adjusted to support multiple properties per capability, that's why all the entity types were touched. The default state change event is now `"{LIVISI_STATE_CHANGE}_{CAPABILITY}_{PROPERTY}"`

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ coverage.xml
 
 # example file of my local config that should not be public
 devices.json
+messages.json
 
 # Home Assistant configuration
 config/*
