--- a/.ruff.toml
+++ b/.ruff.toml
@@ -2,6 +2,7 @@
 
 target-version = "py310"
 
+[lint]
 select = [
     "B007",    # Loop control variable {name} not used within loop body
     "B014",    # Exception handler with duplicate exception
@@ -38,8 +39,8 @@ ignore = [
     "E731", # do not assign a lambda expression, use a def
 ]
 
-[flake8-pytest-style]
+[lint.flake8-pytest-style]
 fixture-parentheses = false
 
-[mccabe]
+[lint.mccabe]
 max-complexity = 25
