--- a/custom_components/livisi/manifest.json
+++ b/custom_components/livisi/manifest.json
@@ -1,16 +1,13 @@
 {
   "domain": "livisi",
   "name": "Livisi Unofficial",
-  "codeowners": [
-    "@planbnet"
-  ],
+  "codeowners": ["@planbnet"],
   "config_flow": true,
   "documentation": "https://github.com/planbnet/livisi_unofficial",
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/planbnet/livisi_unofficial/issues",
-  "requirements": [
-    "aiohttp",
-    "websockets"
-  ],
+  "requirements": ["aiohttp", "websockets"],
+  "dependencies": [],
+  "after_dependencies": [],
   "version": "1.9.0"
 }
