--- a/custom_components/livisi/manifest.json
+++ b/custom_components/livisi/manifest.json
@@ -2,12 +2,17 @@
   "domain": "livisi",
   "name": "Livisi Unofficial",
   "after_dependencies": [],
-  "codeowners": ["@planbnet"],
+  "codeowners": [
+    "@planbnet"
+  ],
   "config_flow": true,
   "dependencies": [],
   "documentation": "https://github.com/planbnet/livisi_unofficial",
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/planbnet/livisi_unofficial/issues",
-  "requirements": ["aiohttp", "websockets"],
-  "version": "1.9.0"
+  "requirements": [
+    "aiohttp",
+    "websockets"
+  ],
+  "version": "1.13.1"
 }
