--- a/custom_components/livisi/manifest.json
+++ b/custom_components/livisi/manifest.json
@@ -11,8 +11,7 @@
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/planbnet/livisi_unofficial/issues",
   "requirements": [
-    "aiohttp",
-    "websockets"
+    "livisi==1.0.0"
   ],
   "version": "1.13.1"
 }
